{
  "version": 4,
  "terraform_version": "0.13.2",
  "serial": 42,
  "lineage": "ca1eff82-7c73-30d9-9ef6-97441d35c8a4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dove-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:499770825737:internet-gateway/igw-0e8ad14762e94c269",
            "id": "igw-0e8ad14762e94c269",
            "owner_id": "499770825737",
            "tags": {
              "Name": "dove-IGW"
            },
            "vpc_id": "vpc-023eb967d52e0c7a3"
          },
          "dependencies": [
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dove-pub-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0889f8c8af8a8f46f",
            "owner_id": "499770825737",
            "propagating_vgws": [],
            "route": [
              {
                "Cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e8ad14762e94c269",
                "instance_id": "",
                "ipv6_Cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dove-pub-RT"
            },
            "vpc_id": "vpc-023eb967d52e0c7a3"
          },
          "dependencies": [
            "aws_internet_gateway.dove-IGW",
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dove-pub-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-079d3ac920bbde58d",
            "route_table_id": "rtb-0889f8c8af8a8f46f",
            "subnet_id": "subnet-0702dc8aea2ab069a"
          },
          "dependencies": [
            "aws_internet_gateway.dove-IGW",
            "aws_route_table.dove-pub-RT",
            "aws_subnet.dove-pub-1",
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dove-pub-2-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c6a15efdd3ecce25",
            "route_table_id": "rtb-0889f8c8af8a8f46f",
            "subnet_id": "subnet-0bd030bcafcb9f0aa"
          },
          "dependencies": [
            "aws_internet_gateway.dove-IGW",
            "aws_route_table.dove-pub-RT",
            "aws_subnet.dove-pub-2",
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dove-pub-3-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab8117cae1af2346",
            "route_table_id": "rtb-0889f8c8af8a8f46f",
            "subnet_id": "subnet-034752b09207dfdf7"
          },
          "dependencies": [
            "aws_internet_gateway.dove-IGW",
            "aws_route_table.dove-pub-RT",
            "aws_subnet.dove-pub-3",
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dove_stack_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:499770825737:security-group/sg-036f678d3b535efb2",
            "description": "Sec Grp for dove ssh",
            "egress": [
              {
                "Cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_Cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-036f678d3b535efb2",
            "ingress": [
              {
                "Cidr_blocks": [
                  "183.83.39.203/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_Cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dove-stack-sg",
            "name_prefix": "",
            "owner_id": "499770825737",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-023eb967d52e0c7a3"
          },
          "dependencies": [
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dove-priv-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:499770825737:subnet/subnet-0f7c65a49d5d3aa6d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "Cidr_block": "10.0.4.0/24",
            "id": "subnet-0f7c65a49d5d3aa6d",
            "map_public_ip_on_launch": true,
            "owner_id": "499770825737",
            "tags": {
              "Name": "dove-priv-1"
            },
            "vpc_id": "vpc-023eb967d52e0c7a3"
          },
          "dependencies": [
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dove-priv-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:499770825737:subnet/subnet-08324f6d3d557078b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "Cidr_block": "10.0.5.0/24",
            "id": "subnet-08324f6d3d557078b",
            "map_public_ip_on_launch": true,
            "owner_id": "499770825737",
            "tags": {
              "Name": "dove-priv-2"
            },
            "vpc_id": "vpc-023eb967d52e0c7a3"
          },
          "dependencies": [
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dove-priv-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:499770825737:subnet/subnet-0dbd002f3a9bf9957",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "Cidr_block": "10.0.6.0/24",
            "id": "subnet-0dbd002f3a9bf9957",
            "map_public_ip_on_launch": true,
            "owner_id": "499770825737",
            "tags": {
              "Name": "dove-priv-3"
            },
            "vpc_id": "vpc-023eb967d52e0c7a3"
          },
          "dependencies": [
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dove-pub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:499770825737:subnet/subnet-0702dc8aea2ab069a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "Cidr_block": "10.0.1.0/24",
            "id": "subnet-0702dc8aea2ab069a",
            "map_public_ip_on_launch": true,
            "owner_id": "499770825737",
            "tags": {
              "Name": "dove-pub-1"
            },
            "vpc_id": "vpc-023eb967d52e0c7a3"
          },
          "dependencies": [
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dove-pub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:499770825737:subnet/subnet-0bd030bcafcb9f0aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "Cidr_block": "10.0.2.0/24",
            "id": "subnet-0bd030bcafcb9f0aa",
            "map_public_ip_on_launch": true,
            "owner_id": "499770825737",
            "tags": {
              "Name": "dove-pub-2"
            },
            "vpc_id": "vpc-023eb967d52e0c7a3"
          },
          "dependencies": [
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dove-pub-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:499770825737:subnet/subnet-034752b09207dfdf7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "Cidr_block": "10.0.3.0/24",
            "id": "subnet-034752b09207dfdf7",
            "map_public_ip_on_launch": true,
            "owner_id": "499770825737",
            "tags": {
              "Name": "dove-pub-3"
            },
            "vpc_id": "vpc-023eb967d52e0c7a3"
          },
          "dependencies": [
            "aws_vpc.dove"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dove",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:499770825737:vpc/vpc-023eb967d52e0c7a3",
            "assign_generated_ipv6_Cidr_block": false,
            "Cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a938bb07103ef1b4",
            "default_route_table_id": "rtb-03915886d197565cd",
            "default_security_group_id": "sg-0d42f2f315fbe93f4",
            "dhcp_options_id": "dopt-f67ac59d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-023eb967d52e0c7a3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03915886d197565cd",
            "owner_id": "499770825737",
            "tags": {
              "Name": "dove-vpc"
            }
          }
        }
      ]
    }
  ]
}